updated login to work with GoogleOAuth
